Added emailer mailgun details to config DID NOT ADD TO MAIN FUNCTIONALITY

--- a/.config
+++ b/.config
@@ -9,5 +9,10 @@
         "user": "andya",
         "password": "password",
         "name": "lenslocked_test"
+    },
+    "mailgun":{
+        "api_key": "key-xxxxxxxxxxxxxxxxxxxxxxxxxxx",
+        "public_api_key": "pubkey-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+        "domain": "sandboxxxxxxxxxxxxxxxx.mailgun.org"
     }
 }
